# aws-s3-presign-rust

./: Cargo.toml  README.md  docker-compose.yaml
aws-s3-presign/: Cargo.toml
aws-s3-presign-ffi/: Cargo.toml
aws-s3-presign-ffi/src/: lib.rs
aws-s3-presign/src/: lib.rs
docker/: Dockerfile  build.Dockerfile
src/: lib.rs
